--- a/Assignment 01 (Python Basics).ipynb
+++ b/Assignment 01 (Python Basics).ipynb
@@ -404,11 +404,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantity => 50\n",
+      "Your actual purchasing cost was 5000/-Rs. and after discount you need to pay 4500.0/-Rs. Thanks for visiting us.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "#Type your code here\n",
+    "qty = int(input('Enter Quantity you purchased = '))  # Quantity\n",
+    "print('Quantity =>',  qty)\n",
+    "cost = qty*100\n",
+    "if cost > 1000:\n",
+    "    discount_cost = cost*0.1\n",
+    "    new_price = cost - discount_cost\n",
+    "    print(f'Your actual purchasing cost was {cost}/-Rs. and after discount you need to pay {new_price}/-Rs. Thanks for visiting us.')\n",
+    "else:\n",
+    "    print(f'Your bill is {cost}/-Rs..')"
    ]
   },
   {
@@ -434,11 +452,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade F\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "#Type your code here\n",
+    "marks = int(input('Enter Your Marks = '))\n",
+    "if marks >= 80 and marks < 100:\n",
+    "    print('Grade A')\n",
+    "elif marks < 80 and marks >= 60:\n",
+    "    print('Grade B')\n",
+    "elif marks < 60 and marks >=50:\n",
+    "    print('Grade C')\n",
+    "elif marks < 50 and marks >= 45:\n",
+    "    print('Grade D')\n",
+    "elif marks < 45 and marks >= 25:\n",
+    "    print('Grade E')\n",
+    "elif marks < 25:\n",
+    "    print('Grade F')\n",
+    "else:\n",
+    "    print('Enter appropriate marks..')"
    ]
   },
   {
@@ -462,11 +503,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attendance = 94%\n",
+      "You are eligible for the Exams.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "#Type your code here\n",
+    "import math\n",
+    "classes = int(input('Enter Total Classes in This Session = '))\n",
+    "attend_classes = int(input('Enter Total Attended Classes = '))\n",
+    "attendance = math.floor((attend_classes/classes)*100)\n",
+    "\n",
+    "if attendance < 75:\n",
+    "    print(f'Attendance = {attendance}%')\n",
+    "    print(f'Since your attendance is less than 75%, therefore you are not allow to sit in Exams.')\n",
+    "else:\n",
+    "    print(f'Attendance = {attendance}%')\n",
+    "    print('You are eligible for the Exams.')"
    ]
   },
   {
@@ -478,11 +539,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no\n",
+      "Attendance = 61%\n",
+      "Since your attendance is less than 75%, therefore you are not allow to sit in Exams.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "#Type your code here\n",
+    "import math\n",
+    "classes = int(input('Enter Total Classes in This Session = '))\n",
+    "attend_classes = int(input('Enter Total Attended Classes = '))\n",
+    "medical = input('Any medical Issue (Yes/No) = ').lower()\n",
+    "#print(medical)\n",
+    "attendance = math.floor((attend_classes/classes)*100)\n",
+    "\n",
+    "if attendance < 75 and medical == 'no':\n",
+    "    print(f'Attendance = {attendance}%')\n",
+    "    print(f'Since your attendance is less than 75%, therefore you are not allow to sit in Exams.')\n",
+    "elif attendance < 75 and medical == 'yes':\n",
+    "    print(f'Attendance = {attendance}%')\n",
+    "    print(f'Your Attendance is less than 75, but due to Medical Issues management allow you to sit for the exams')\n",
+    "else:\n",
+    "    print(f'Attendance = {attendance}%')\n",
+    "    print('You are eligible for the Exams.')"
    ]
   },
   {
