--- a/Assignment 01 (Python Basics).ipynb
+++ b/Assignment 01 (Python Basics).ipynb
@@ -74,23 +74,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "sum() takes at most 2 arguments (3 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Write your code here\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: sum() takes at most 2 arguments (3 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arithmetic Operators:\n",
+      "a + b = 13\n",
+      "a - b = 7\n",
+      "a * b = 30\n",
+      "a / b = 3.3333333333333335\n",
+      "a % b = 1\n",
+      "a ** b = 1000\n",
+      "a // b = 3\n",
+      "\n",
+      "Comparison Operators:\n",
+      "a == b: False\n",
+      "a != b: True\n",
+      "a > b: True\n",
+      "a < b: False\n",
+      "a >= b: True\n",
+      "a <= b: False\n",
+      "\n",
+      "Assignment Operators:\n",
+      "c += 3: 8\n",
+      "c -= 2: 6\n",
+      "c *= 4: 24\n",
+      "c /= 2: 12.0\n",
+      "c %= 3: 0.0\n",
+      "c **= 2: 0.0\n",
+      "c //= 3: 0.0\n"
      ]
     }
    ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "# Arithmetic Operators\n",
+    "a = 10\n",
+    "b = 3\n",
+    "print(\"Arithmetic Operators:\")\n",
+    "print(f\"a + b = {a + b}\")  # Addition\n",
+    "print(f\"a - b = {a - b}\")  # Subtraction\n",
+    "print(f\"a * b = {a * b}\")  # Multiplication\n",
+    "print(f\"a / b = {a / b}\")  # Division\n",
+    "print(f\"a % b = {a % b}\")  # Modulus\n",
+    "print(f\"a ** b = {a ** b}\")  # Exponentiation\n",
+    "print(f\"a // b = {a // b}\")  # Floor Division\n",
+    "\n",
+    "# Comparison Operators\n",
+    "print(\"\\nComparison Operators:\")\n",
+    "print(f\"a == b: {a == b}\")  # Equal to\n",
+    "print(f\"a != b: {a != b}\")  # Not equal to\n",
+    "print(f\"a > b: {a > b}\")  # Greater than\n",
+    "print(f\"a < b: {a < b}\")  # Less than\n",
+    "print(f\"a >= b: {a >= b}\")  # Greater than or equal to\n",
+    "print(f\"a <= b: {a <= b}\")  # Less than or equal to\n",
+    "\n",
+    "# Assignment Operators\n",
+    "c = 5\n",
+    "print(\"\\nAssignment Operators:\")\n",
+    "c += 3\n",
+    "print(f\"c += 3: {c}\")  # Equivalent to c = c + 3\n",
+    "c -= 2\n",
+    "print(f\"c -= 2: {c}\")  # Equivalent to c = c - 2\n",
+    "c *= 4\n",
+    "print(f\"c *= 4: {c}\")  # Equivalent to c = c * 4\n",
+    "c /= 2\n",
+    "print(f\"c /= 2: {c}\")  # Equivalent to c = c / 2\n",
+    "c %= 3\n",
+    "print(f\"c %= 3: {c}\")  # Equivalent to c = c % 3\n",
+    "c **= 2\n",
+    "print(f\"c **= 2: {c}\")  # Equivalent to c = c ** 2\n",
+    "c //= 3\n",
+    "print(f\"c //= 3: {c}\")  # Equivalent to c = c // 3"
    ]
   },
   {
@@ -583,11 +641,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year =>  1900\n",
+      "1900 is not a leap year.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "#Type your code here\n",
+    "year = int(input(\"Enter a year: \"))\n",
+    "print('Year => ', year)\n",
+    "\n",
+    "if year % 4 == 0:\n",
+    "    if year % 100 == 0:\n",
+    "        if year % 400 == 0:\n",
+    "            print(f\"{year} is a leap year.\")\n",
+    "        else:\n",
+    "            print(f\"{year} is not a leap year.\")\n",
+    "    else:\n",
+    "        print(f\"{year} is a leap year.\")\n",
+    "else:\n",
+    "    print(f\"{year} is not a leap year.\")"
    ]
   },
   {
@@ -607,11 +687,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender = female \n",
+      "Age = 33 \n",
+      "Marital Status = yes\n",
+      "You need to work only in Urban Areas..\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "#Type your code here\n",
+    "gender = input('Enter Gender.. = ').lower()\n",
+    "age_1 = int(input('Enter Age = '))\n",
+    "marital_status = input('Enter Marital Status (Y/N) = ')\n",
+    "print(f'Gender = {gender} \\nAge = {age_1} \\nMarital Status = {marital_status}')\n",
+    "if gender == 'female':\n",
+    "    print('You need to work only in Urban Areas..')\n",
+    "elif gender == 'male' and 20 <= age_1 <= 40:\n",
+    "    print('You can work anywhere..')\n",
+    "elif gender == 'male' and 40 <= age_1 <= 60:\n",
+    "    print('You will only work in urban areas.')\n",
+    "else:\n",
+    "    print('Wrong Input!!')\n"
    ]
   },
   {
@@ -629,6 +732,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Units Consumed =  190\n",
+      "Your Total Bill is 950/-.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Type your code here\n",
+    "elec_units = int(input('Enter Units Consumed.. = '))\n",
+    "print('Units Consumed = ', elec_units)\n",
+    "if elec_units <= 100:\n",
+    "    payable_amount = 0\n",
+    "    print(f'Your Total Bill is {payable_amount}/-.')\n",
+    "elif 100 <= elec_units <= 200:\n",
+    "    payable_amount = elec_units*5\n",
+    "    print(f'Your Total Bill is {payable_amount}/-.')\n",
+    "elif elec_units > 200:\n",
+    "    payable_amount = elec_units*10\n",
+    "    print(f'Your Total Bill is {payable_amount}/-.')\n",
+    "else:\n",
+    "    print('Contact Supplier..')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -637,11 +771,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age-1 = 90 \n",
+      "Age-2 = 40, \n",
+      "Age-3 = 10\n",
+      "Oldest Person Age is 90 \n",
+      "Youngest Person Age is 10\n"
+     ]
+    }
+   ],
    "source": [
-    "#Type your code here"
+    "user_age1 = int(input('Enter Age = '))\n",
+    "user_age2 = int(input('Enter Age = '))\n",
+    "user_age3 = int(input('Enter Age = '))\n",
+    "print(f'Age-1 = {user_age1} \\nAge-2 = {user_age2}, \\nAge-3 = {user_age3}')\n",
+    "ages = [user_age1, user_age2, user_age3]\n",
+    "max_age = max(ages) # Maximum Age\n",
+    "min_age = min(ages) # Minimum Age\n",
+    "\n",
+    "print(f'Oldest Person Age is {max_age} \\nYoungest Person Age is {min_age}')"
    ]
   }
  ],
