only 2 questions remains

--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -60,6 +60,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Scenario 2: Student Grades  \n",
     "- You are managing student grades using a dictionary. You need to calculate the average grade.take \n",
     "atleast 5 Students grades & then calculate the average. "
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[85, 92, 78, 90, 82]\n"
+      "Sum of All Grades = 427\n",
+      "Total Value = 5\n",
+      "Average = 85.4\n"
      ]
     }
    ],
@@ -99,36 +108,79 @@
     "for grade in student_grades.values():\n",
     "    grade_list.append(grade)\n",
     "\n",
-    "print(grade_list)\n"
+    "grades_sum = sum(grade_list)\n",
+    "total_values = len(grade_list)\n",
+    "\n",
+    "# Calculating Average\n",
+    "avg_grade = grades_sum/total_values\n",
+    "print(f\"Sum of All Grades = {grades_sum}\")\n",
+    "print(f\"Total Value = {total_values}\")\n",
+    "print(f\"Average = {avg_grade}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scenario 3: Word Frequency Counter \n",
+    "- You are given a list of words, and you need to count the frequency of each word. <br/>\n",
+    "word_list = [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\", \"grape\", \"apple\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word_list = [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\", \"grape\", \"apple\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple: 3\n",
+      "banana: 2\n",
+      "orange: 1\n",
+      "grape: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_frequency = {}\n",
+    "\n",
+    "# Iterate through the list and count the frequency of each word\n",
+    "for word in word_list:\n",
+    "    if word in word_frequency:\n",
+    "        word_frequency[word] += 1\n",
+    "    else:\n",
+    "        word_frequency[word] = 1\n",
+    "\n",
+    "# Print the frequency of each word\n",
+    "for word, frequency in word_frequency.items():\n",
+    "    print(f\"{word}: {frequency}\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
